# BMAD_analyser

./: CMakeLists.txt  README.md  main.cpp
analyser/: E_RF_test.cc  SM_RF_test.cc  SM_RF_test_2.cc  spin_model.cc  spin_model_2D.cc  windmap.cc
include/: analyser.hh  lv1.hh  lv2.hh  proton.hh  proton_RF.hh
lv1/: c.cc  e.cc  eta.cc  pt.cc  sigma.cc
lv2/: eta1.cc  sigma1.cc
src/: Courant_Snyder.cc  init.cc  line.cc  longitudinal.cc  phase_slip.cc  spin_sigma.cc  spin_tune.cc  wave_mean.cc
